# agent-monitor

./: .gitignore  CLOUDFLARE_CONFIG.md  Makefile  Package.resolved  Package.swift  QUICK_START.txt  README.md  WINID_DIAGNOSTICS.md  WINID_FIX_SUMMARY.md  WINID_OVERVIEW.md  index.html  install.sh  overview.md  package-lock.json  package.json  pty-launcher-guide.md  screenshot.mjs  ui-preview.html  uninstall.sh
.cursor/: hooks.json
cloudflare/: package-lock.json  package.json  schema.sql  tsconfig.json  wrangler.toml
packaging/: 99-winid-session.fish  Info.plist.template  com.embitious.agent-monitor.plist
scripts/: agm-env.sh  claude-posttooluse-notify.sh  claude-sessionstart-notify.sh  claude-stop-notify.sh  claude-stopfailure-notify.sh  claude-subagentstop-notify.sh  cursor-stop-notify.sh  install-cursor-notify-hooks.sh  notify-hook-context.py  notify-post.sh  setup-notify-panel.sh  verify-winid.sh  winid-session-register.sh
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  state.rs
src-tauri/src/commands/: files.rs  mod.rs  notepad.rs  notifications.rs  preview.rs  projects.rs  winid.rs
src-tauri/src/models/: audit.rs  mod.rs  notice.rs  pad.rs  project.rs
src-tauri/src/server/: auth.rs  mod.rs  routes.rs  websocket.rs
src-tauri/src/services/: cloud_sync.rs  instance_id.rs  mod.rs  project_db.rs  pty_writer.rs  session_discover.rs  system_notify.rs  window_capture.rs  window_layout.rs  winid_locator.rs  winid_runner.rs
(+55 files in other folders)
